--- a/style.css
+++ b/style.css
@@ -18,16 +18,25 @@ body {
     border-color: black;
 }
 
+.main {
+    display:flex ;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 h1 {
     text-align: center;
     font-size: 60px;
 }
 
-
-
+h2 {
+    text-align: center;
+    font-size: 60px;
+}
 
 #searchInput {
     display: flex;
+    flex-wrap: wrap;
     justify-content:center;
     width: 75% ;
     text-align: center;
@@ -74,6 +83,7 @@ h1 {
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    background-color: aquamarine;
 }
 
 .star {
@@ -87,7 +97,10 @@ h1 {
 }
 
 #backButton {
+    display: flex;
+    justify-content: center;
     margin-bottom: 20px;
+    margin-top: 20px;
     font-size: 20px;
     font-family: lic;
     padding: 10px;
